# livelybot_arm

livelybot_new/.catkin_tools/profiles/default/: devel_collisions.txt
livelybot_new/src/: TODO
livelybot_new/src/livelybot_bringup/: CMakeLists.txt  package.xml
livelybot_new/src/livelybot_bringup/launch/: ik_run_12.launch  ik_run_18.launch  ik_run_20.launch  open_imu.launch  open_imu_rviz.launch  show_model_rviz.launch  test_2dof_ankle.launch  test_feedback.launch  test_motor.launch  test_motor_combi_pos_vel.launch  test_motor_run.launch  test_motor_run_18.launch  test_motor_run_20.launch  test_motor_torque.launch  tstArm.launch
livelybot_new/src/livelybot_description/: CMakeLists.txt
livelybot_new/src/livelybot_description/launch/: livelybot_description.launch
livelybot_new/src/livelybot_description/robot_param/: 10dof_STM32H730_model_P_Hector_params.yaml  1dof_STM32H730_model.yaml  (+9 more)
livelybot_new/src/livelybot_serial/: CMakeLists.txt  package.xml
livelybot_new/src/livelybot_serial/include/: 6Dof_Modle_dyna.h  lively_serial.h  motor_struct.h  serial_struct.h
livelybot_new/src/livelybot_serial/include/crc/: crc16.h
livelybot_new/src/livelybot_serial/include/eigen/: .gitlab-ci.yml
livelybot_new/src/livelybot_serial/include/eigen/Eigen/src/Core/: MathFunctions.h
livelybot_new/src/livelybot_serial/include/hardware/: canboard.h  canport.h  motor.h  robot.h
livelybot_new/src/livelybot_serial/src/: lively_serial.cc  testArm.cpp
livelybot_new/src/livelybot_serial/src/hardware/: motor.cc
livelybot_new/src/livelybot_urdf/: CMakeLists.txt  package.xml
(+22 files in other folders)
